<resources>
    <string name="app_name">CoffeeNotes</string>
    <string name="title">Title</string>

    <string-array name="coffee_types_array">
        <item>Espresso</item>
        <item>Latte</item>
        <item>Flat white</item>
    </string-array>
    <string name="new_beans_type">New beans</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="edit_beans_type_list">Edit</string>
    <string name="remove">Remove</string>
    <string name="beans_name_label">Name</string>
    <string name="beans_country_label">Country</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roast_picker_label">Select roast level</string>
    <string name="roast_level_title">Roast level</string>
    <string name="photo">Photo</string>
    <string name="take_photo">Take photo</string>
</resources>
