<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beans_name_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/beans_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beans_country_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/beans_country_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roast_level_title"
        style="?android:listSeparatorTextViewStyle"/>
    <Button
        android:id="@+id/roast_level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        style="?android:listSeparatorTextViewStyle"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/beans_photo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_image"
            android:visibility="invisible"/>
        <ProgressBar
            android:id="@+id/beans_photo_progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"/>
</LinearLayout>